--- a/config
+++ b/config
@@ -37,12 +37,13 @@ set $menu dmenu_path | wmenu | xargs swaymsg exec --
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-#output * bg /home/gica/Pictures/gzcnrpxss6j61.webp fill
+# output * bg /home/gica/Pictures/*** fill
 #
 # Example configuration:
 #
-#   output HDMI-A-1 resolution 1920x1080 position 1920,0
 #
+    output DP-1 resolution 2560x1440@165Hz position 2560,0
+    output HDMI-A-1 resolution 1920x1080@144Hz
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
 ### Idle configuration
